// Path: crates/ipc/proto/control.proto
syntax = "proto3";
package ioi.control.v1;

// The service provided by the Workload container to the Orchestrator.
// Used for high-frequency, low-latency signaling.
service WorkloadControl {
  // Prepares a model or execution context in memory.
  rpc LoadModel (LoadModelRequest) returns (LoadModelResponse);

  // Triggers execution of a job. 
  // Inputs/Outputs are read/written directly from Shared Memory via the Data Plane.
  rpc ExecuteJob (ExecuteJobRequest) returns (ExecuteJobResponse);
  
  // Liveness probe.
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

// Service exposed by the Guardian container to the Workload.
// Used for secure egress and key management.
service GuardianControl {
  // Execute an HTTP call using a secret securely held by the Guardian.
  rpc SecureEgress(SecureEgressRequest) returns (SecureEgressResponse);
}

message LoadModelRequest {
  string model_id = 1;
  // Identifier for the shared memory region (e.g., shm_open name)
  string shmem_region_id = 2;
}

message LoadModelResponse {
  bool success = 1;
  // Bytes allocated in shared memory for this context
  uint64 memory_usage_bytes = 2;
}

message ExecuteJobRequest {
  uint64 job_id = 1;
  // Offset in the shared memory region where the input (AgentContext) begins
  uint64 input_offset = 2;
  // Length of the input data
  uint64 input_length = 3;
  // The session ID used for key derivation (32 bytes)
  bytes session_id = 4;
}

message ExecuteJobResponse {
  bool success = 1;
  // Offset in shared memory where the output (InferenceOutput) was written
  uint64 output_offset = 2;
  uint64 output_length = 3;
  uint64 gas_used = 4;
  string error_message = 5;
}

message HealthCheckRequest {}
message HealthCheckResponse {
  bool ready = 1;
  string status = 2;
}

message SecureEgressRequest {
  string domain = 1;
  string path = 2;
  string method = 3;
  bytes body = 4;
  // The identifier of the secret to use (e.g., "openai_primary")
  // This maps to a file in the Guardian's secure keystore.
  string secret_id = 5; 
  
  // [NEW] JSON path for payload injection (e.g. "payment.handlers[0].token")
  // If present, the Guardian parses the body as JSON and injects the secret here
  // instead of (or in addition to) the Authorization header.
  string json_patch_path = 6;
}

message SecureEgressResponse {
  bytes body = 1;
  // The hash of the TLS certificate from the remote server.
  bytes cert_hash = 2;
  // The Guardian's signature attesting to this network call.
  bytes guardian_signature = 3;
}